prevent horizontal scroll in mobile

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,8 +13,13 @@ html {
     scroll-behavior: smooth;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     font-family: $base-font;
     margin: 0px;
     min-height: 100vh;
+    position: relative;
 }
